[package]
name = "imgr"
version = "1.0.1"
edition = "2021"
include = ["src/**/*.rs", "README.md"]
repository = "https://github.com/shamxl/imgr"
license = "MIT"
description = "image to ascii converter"
keywords = ["terminal", "cli", "command-line", "ascii"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.4.7", features=["derive"]}
image = "0.24.7"
